--- a/etc/Config.ini
+++ b/etc/Config.ini
@@ -1,3 +1,37 @@
+[logging]
+minLevel=WARNING
+bufferSize=100
+fileName=../logs/Kapok.log
+maxSize=1000000
+maxBackups=2
+timestampFormat=dd.MM.yyyy hh:mm:ss.zzz
+msgFormat={timestamp} {typeNr} {type} {thread} {msg}
+
+[sessions]
+expirationTime=3600000
+cookieName=sessionid
+;cookieDomain=mydomain.com
+cookiePath=/
+cookieComment=Identifies the user
+
+[files]
+path=../docroot
+encoding=UTF-8
+maxAge=90000
+cacheTime=60000
+cacheSize=1000000
+maxCachedFileSize=65536
+
 [listener]
-;host=192.168.112.158
-port=10086
+;host=localhost
+port=8080
+#sslKeyFile=ssl/server.key
+#sslCertFile=ssl/server.crt
+#caCertFile=ssl/ca.crt
+#verifyPeer=true
+minThreads=4
+maxThreads=100
+cleanupInterval=60000
+readTimeout=60000
+maxRequestSize=16000
+maxMultiPartSize=10000000
